src/test/deca/codegen/invalid/calling_method_on_not_init.ass
; start main program
	TSTO #9
	BOV pile_pleine
	ADDSP #6

; Generation table des methodes
; Table methodes Object
	LOAD #null, R2
	STORE R2, 1(GB)
	LOAD code.Object.equals, R2
	STORE R2, 2(GB)
; Table methodes A
	LEA 1(GB), R2
	STORE R2, 3(GB)
	LOAD code.Object.equals, R2
	STORE R2, 4(GB)
	LOAD code.A.method, R2
	STORE R2, 5(GB)

; Main program
; Variables declarations:
	LOAD #null, R2
	STORE R2, 6(GB)
; Beginning of main instructions:
	ADDSP #1
	LOAD 6(GB), R2
	STORE R2, 0(SP)
	LOAD 0(SP), R2
	CMP #null, R2
	BEQ dereferencement_null
	LOAD 0(R2), R2
	BSR 2(R2)
	SUBSP #1
	HALT

; Methodes de classe
code.Object.equals:
	TSTO #2
	BOV pile_pleine
	PUSH R2
	PUSH R3
	LOAD -2(LB), R2
	LOAD -3(LB), R3
	CMP R2, R3
	SEQ R0
	POP R3
	POP R2
	RTS
; Corps des methodes de la classe A
init.A:
	TSTO #2
	BOV pile_pleine
	ADDSP #2
	PUSH R2
	LOAD -2(LB), R2
	POP R2
	RTS
code.A.method:
	TSTO #0
	BOV pile_pleine
	ADDSP #0

; Variables declarations
; Beginning of instructions
	WSTR "I'm doing stuff"
	RTS
; end main program
; Gestion des erreurs d'executions
pile_pleine:
	WSTR "Débordement de pile"
	WNL
	ERROR
tas_plein:
	WSTR "Débordement du tas"
	WNL
	ERROR
division_par_0:
	WSTR "Division par 0"
	WNL
	ERROR
debordement_arithmetique:
	WSTR "Débordement arithmetique"
	WNL
	ERROR
dereferencement_null:
	WSTR "Déréférencement de ""null"""
	WNL
	ERROR
cast_impossible:
	WSTR "Cast impossible"
	WNL
	ERROR
index_hors_range:
	WSTR "Index hors range"
	WNL
	ERROR
erreur_de_lecture:
	WSTR "Erreur de lecture"
	WNL
	ERROR
